--- a/application/view/default/index.phtml
+++ b/application/view/default/index.phtml
@@ -2,7 +2,7 @@
 <h2>Software Engineer Technical Test</h2>
 <div id="content">
     <p>
-        Please proceed to <a href="index.php/orders/">view the current orders</a>.
+        Please proceed to <a href="/orders/">view the current orders</a>.
     </p>
 </div>
 <?php include 'footer.phtml'; ?>
